[gd_scene load_steps=34 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=2]
[ext_resource path="res://resources/assets/background/bg8.png" type="Texture" id=3]
[ext_resource path="res://HighScoreValue.gd" type="Script" id=4]
[ext_resource path="res://resources/assets/icons/Start_BTN.png" type="Texture" id=5]
[ext_resource path="res://resources/fonts/BigSpace-rPKx.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://resources/assets/icons/Exit_BTN.png" type="Texture" id=7]
[ext_resource path="res://resources/assets/icons/Info_BTN.png" type="Texture" id=8]
[ext_resource path="res://resources/assets/icons/Settings_BTN.png" type="Texture" id=9]
[ext_resource path="res://resources/assets/icons/Shop_BTN.png" type="Texture" id=10]
[ext_resource path="res://LastScoreValue.gd" type="Script" id=11]
[ext_resource path="res://resources/assets/icons/Window.png" type="Texture" id=12]
[ext_resource path="res://resources/fonts/CasanovaScotia-Xm0K.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://resources/assets/icons/Close_BTN.png" type="Texture" id=14]
[ext_resource path="res://resources/assets/icons/Music_BTN.png" type="Texture" id=15]
[ext_resource path="res://resources/assets/icons/Sound_BTN.png" type="Texture" id=16]
[ext_resource path="res://resources/assets/icons/Vibration_BTN.png" type="Texture" id=17]
[ext_resource path="res://resources/assets/icons/Backward_BTN.png" type="Texture" id=18]
[ext_resource path="res://resources/assets/icons/Record.png" type="Texture" id=19]
[ext_resource path="res://resources/assets/icons/Score.png" type="Texture" id=20]
[ext_resource path="res://resources/assets/icons/active/Shop_BTN.png" type="Texture" id=21]
[ext_resource path="res://resources/assets/icons/active/Info_BTN.png" type="Texture" id=22]
[ext_resource path="res://resources/assets/icons/active/Settings_BTN.png" type="Texture" id=23]
[ext_resource path="res://resources/assets/icons/active/Close_BTN.png" type="Texture" id=24]
[ext_resource path="res://resources/assets/icons/active/Music_BTN.png" type="Texture" id=25]
[ext_resource path="res://resources/assets/icons/active/Sound_BTN.png" type="Texture" id=26]
[ext_resource path="res://resources/assets/icons/active/Vibration_BTN.png" type="Texture" id=27]
[ext_resource path="res://resources/assets/icons/active/Backward_BTN.png" type="Texture" id=28]

[sub_resource type="DynamicFont" id=1]
size = 65
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 40
extra_spacing_top = 12
extra_spacing_bottom = 12
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=5]
size = 45
font_data = ExtResource( 13 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 360.0
margin_bottom = 740.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
texture = ExtResource( 3 )
centered = false

[node name="Label" type="Label" parent="Control"]
margin_left = 21.4801
margin_top = 35.2599
margin_right = 333.48
margin_bottom = 129.26
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.890196, 0.960784, 0.956863, 1 )
text = "FALLMANIA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoreTag" type="Sprite" parent="Control"]
position = Vector2( 34, 139 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 19 )
centered = false

[node name="LastscoreTag" type="Sprite" parent="Control"]
position = Vector2( 34, 181 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )
centered = false

[node name="HighScoreValue" type="Label" parent="Control"]
margin_left = 185.0
margin_top = 126.0
margin_right = 352.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.890196, 0.960784, 0.956863, 1 )
text = "0
"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastScoreValue" type="Label" parent="Control"]
margin_left = 185.355
margin_top = 168.811
margin_right = 335.355
margin_bottom = 323.811
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.890196, 0.960784, 0.956863, 1 )
text = "0"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Control"]
margin_left = 105.0
margin_top = 580.0
margin_right = 255.0
margin_bottom = 620.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="Control"]
margin_left = 105.0
margin_top = 630.0
margin_right = 255.0
margin_bottom = 670.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TextureButton" parent="Control"]
margin_left = 10.0
margin_top = 370.0
margin_right = 50.0
margin_bottom = 410.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 23 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopButton" type="TextureButton" parent="Control"]
margin_left = 310.0
margin_top = 370.0
margin_right = 350.0
margin_bottom = 410.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionButton" type="TextureButton" parent="Control"]
margin_left = 10.0
margin_top = 420.0
margin_right = 50.0
margin_bottom = 460.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuPopup" type="PopupMenu" parent="Control"]
margin_left = 40.0
margin_top = 250.03
margin_right = 60.0
margin_bottom = 270.03
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/MainMenuPopup"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 12 )
centered = false

[node name="InstructionsLabel" type="Label" parent="Control/MainMenuPopup/Sprite"]
visible = false
margin_left = 28.0
margin_top = 163.0
margin_right = 924.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.890196, 0.960784, 0.956863, 1 )
text = "Mission Instructions:
Scroll sreen to move
Collet boxes to obtain ammo
The ammount of ammo is indicated on
the top rightorner of the screen
Tap while moving to shoot
Shooting earns you more points"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="Control/MainMenuPopup/Sprite"]
margin_left = 385.0
margin_top = 865.201
margin_right = 535.0
margin_bottom = 1015.2
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 24 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsContainer" type="Control" parent="Control/MainMenuPopup/Sprite"]
margin_left = 33.0
margin_top = 172.0
margin_right = 918.0
margin_bottom = 842.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="TextureButton" parent="Control/MainMenuPopup/Sprite/SettingsContainer"]
margin_left = 70.0
margin_top = 50.0
margin_right = 190.0
margin_bottom = 170.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 25 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="Control/MainMenuPopup/Sprite/SettingsContainer"]
margin_left = 250.0
margin_top = 60.0
margin_right = 450.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.890196, 0.960784, 0.956863, 1 )
text = "On"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" type="TextureButton" parent="Control/MainMenuPopup/Sprite/SettingsContainer"]
margin_left = 70.0
margin_top = 190.0
margin_right = 190.0
margin_bottom = 310.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 26 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundLabel" type="Label" parent="Control/MainMenuPopup/Sprite/SettingsContainer"]
margin_left = 250.0
margin_top = 190.0
margin_right = 450.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.890196, 0.960784, 0.956863, 1 )
text = "On"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VibrationButton" type="TextureButton" parent="Control/MainMenuPopup/Sprite/SettingsContainer"]
margin_left = 70.0
margin_top = 340.0
margin_right = 190.0
margin_bottom = 460.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 27 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VibrationLabel" type="Label" parent="Control/MainMenuPopup/Sprite/SettingsContainer"]
margin_left = 250.0
margin_top = 340.0
margin_right = 450.0
margin_bottom = 450.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.890196, 0.960784, 0.956863, 1 )
text = "On"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SenitivityTag" type="Label" parent="Control/MainMenuPopup/Sprite/SettingsContainer"]
margin_left = 60.0
margin_top = 480.0
margin_right = 373.0
margin_bottom = 590.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.890196, 0.960784, 0.956863, 1 )
text = "SENSITIVITY"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SenitivityLabel" type="Label" parent="Control/MainMenuPopup/Sprite/SettingsContainer"]
margin_left = 413.0
margin_top = 480.0
margin_right = 609.0
margin_bottom = 590.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.890196, 0.960784, 0.956863, 1 )
text = "MEDIUM"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SensitivityButton" type="TextureButton" parent="Control/MainMenuPopup/Sprite/SettingsContainer"]
margin_left = 663.0
margin_top = 490.0
margin_right = 753.0
margin_bottom = 565.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 28 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdMob" type="Node" parent="Control"]
script = ExtResource( 2 )
is_real = true
banner_on_top = false
banner_id = "ca-app-pub-9093002613352397/2504992224"
interstitial_id = "ca-app-pub-9093002613352397/6719569409"
rewarded_id = "ca-app-pub-9093002613352397/5841602008"
[connection signal="pressed" from="Control/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Control/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Control/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Control/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="Control/InstructionButton" to="." method="_on_InstructionButton_pressed"]
[connection signal="pressed" from="Control/MainMenuPopup/Sprite/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Control/MainMenuPopup/Sprite/SettingsContainer/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="Control/MainMenuPopup/Sprite/SettingsContainer/SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="Control/MainMenuPopup/Sprite/SettingsContainer/VibrationButton" to="." method="_on_VibrationButton_pressed"]
[connection signal="pressed" from="Control/MainMenuPopup/Sprite/SettingsContainer/SensitivityButton" to="." method="_on_SensitivityButton_pressed"]
